Update and rename code to index.html

--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -43,10 +43,10 @@
 						<h1 style="text-shadow: #394c14 1px 2px 1px; font-family:'Times New Roman', Times, serif"> Екатерина Герасимова</h1>
 						<hr> 
 						<p style="color: wheat; text-shadow: #394c14 1px 2px 1px;"><i>Человек, <b> пока что </b> не умеющий создавать </i> <b> HTML </b> <em font-weigh: lighter>(но очень старающийся!).</em></p> 
-						<img src="https://github.com/RinaGer/lingdata/blob/main/mywebpage/IMAGE%202023-09-14%2002_30_41.jpg?raw=true" style="border-radius: 30% 30% 30% 30%; image-resolution:100%; border: 2px solid rgb(78, 105, 25); height:120%; width:80%; position:absolute; border-right:;">
+						<img src="IMAGE 2023-09-14 02_30_41.jpg" style="border-radius: 30% 30% 30% 30%; image-resolution:100%; border: 2px solid rgb(78, 105, 25); height:120%; width:80%; position:absolute; border-right:;">
 					</div>
 					<div class="col-md-4">
-<img src="https://github.com/RinaGer/lingdata/blob/main/mywebpage/photo_2023-09-14%2002.39.41.jpeg?raw=true" style="border-radius: 30% 30% 30% 30%; height:120%; width:120%; border: 2px solid rgb(78, 105, 25); margin-right: 400px;">
+<img src="photo_2023-09-14 02.39.41.jpeg" style="border-radius: 30% 30% 30% 30%; height:120%; width:120%; border: 2px solid rgb(78, 105, 25); margin-right: 400px;">
 					</div>
 				</div>
 				<div class="col-md-3" style="position: absolute; left: 1000px;">
@@ -114,7 +114,7 @@
                                     </i>
                                 </ol>
 						</p>
-						<img src="https://github.com/RinaGer/lingdata/blob/main/mywebpage/IMAGE%202023-09-14%2002:39:21.jpg?raw=true" style="border: 2px solid rgb(78, 105, 25); border-radius: 30% 30% 30% 30%; height: 70%; width: 70%; position:absolute; left:110%; bottom: 30%">
+						<img src="IMAGE 2023-09-14 13:10:27.jpg;" style="border: 2px solid rgb(78, 105, 25); border-radius: 30% 30% 30% 30%; height: 70%; width: 70%; position:absolute; left:110%; bottom: 30%">
 					</article>
 				</div>
 
