--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -114,7 +114,7 @@
                                     </i>
                                 </ol>
 						</p>
-						<img src="IMAGE 2023-09-14 13:10:27.jpg;" style="border: 2px solid rgb(78, 105, 25); border-radius: 30% 30% 30% 30%; height: 70%; width: 70%; position:absolute; left:110%; bottom: 30%">
+						<img src="IMAGE 2023-09-14 13:10:27.jpg" style="border: 2px solid rgb(78, 105, 25); border-radius: 30% 30% 30% 30%; height: 70%; width: 70%; position:absolute; left:110%; bottom: 30%">
 					</article>
 				</div>
 
